--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "author": "Amanjot Singh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "oauth": "^0.10.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
